--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <link rel="stylesheet" media="screen and (min-width: 901px)" href="css/desktop.css">
 </head>
 <body>
+
+
+<div id='hideMe'><img id="spinner"src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt=""/></div>
+
+	<div class="loading-container">
+
+	
 	<div class="loader">
 	<header><img class="heading-image" src="images/ohmyfood.png">
 </header>
