--- a/menu1.html
+++ b/menu1.html
@@ -10,9 +10,13 @@
 <link rel="stylesheet" media="screen and (min-width: 901px)" href="css/desktop.css">
 </head>
 <body>
+
+	<div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt=""/></div>
+
+	<div class="loading-container">
 	
 	<header><div class="flex-container">
-  <div><i class="fas fa-arrow-left"></div></i></div><img class="heading-image" src="images/ohmyfood.png">
+  <div><i class="fas fa-arrow-left"></i></div></div><img class="heading-image" src="images/ohmyfood.png">
 </header>
 
 <img class="menu-page-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
@@ -22,7 +26,7 @@
 <div class="menu-container">
 
 <div class="restaurant-name">
-<div class="heart-menu"><i id="heart-id" class="far fa-heart fa-2x" class="fa fa-heart fa-2x"></i></div>
+<div class="heart-menu"><i id="heart-id" class="far fa-heart fa-2x"></i></div>
 <h1>restaurant name here</h1></div>
 
 
@@ -34,17 +38,20 @@
 
 <div class="nc">
 
+<div class="food">
+<div class="wrapper">
+<a href="#"><span>
+	<p>Here is the dish name</p>
+<p>test 1<strong> Dish price $$$</strong></p></span>
+  <i id="check" class="fa fa-check-circle"></i></a>
+</div>
 
 
-<div class="food"><strong><p>test1</p></strong>
-<p>test 2</p></div>
-<div class="food"><strong><p>test2</p></strong>
-<p>test 2</p></div>
-<div class="food"><strong><p>test3</p></strong>
-<p>test 2</p></div>
-<div class="food"><strong><p>test4</p></strong>
-<p>test 2</div>
-
+<a href="#"><span>
+	<p>Here is the dish name</p>
+<p>test 2<strong> Dish price $$$</strong></p></span>
+  <i id="check" class="fa fa-check-circle"></i></a>
+</div>
 
 </div>
 
@@ -55,11 +62,11 @@
 
 <div class="nc">
 
-<div class="food"><strong><p>test</p></strong>
+<div class="food"><p><strong>test</strong></p>
 <p>test 2</p></div>
-<div class="food"><strong><p>test</p></strong>
+<div class="food"><p><strong>test</strong></p>
 <p>test 2</p></div>
-<div class="food"><strong><p>test</p></strong>
+<div class="food"><p><strong>test</strong></p>
 <p>test 2</p></div>
 
 </div>
@@ -71,11 +78,11 @@
 
 <div class="nc">
 
-<div class="food"><strong><p>test</p></strong>
+<div class="food"><p><strong>test</strong></p>
 <p>test 2</p></div>
-<div class="food"><strong><p>test</p></strong>
+<div class="food"><p><strong>test</strong></p>
 <p>test 2</p></div>
-<div class="food"><strong><p>test</p></strong>
+<div class="food"><p><strong>test</strong></p>
 <p>test 2</p></div>
 
 </div>
@@ -88,13 +95,15 @@
 
 </div>
 
-<footer>
+</div>
+
+
+<!--<footer>
 <img class="bottom-image" src="images/ohmyfood.png">
-<dt><i class="fas fa-utensils fa-xs"></i><a href="https://www.youtube.com/watch?v=ql5vXHl6QOE" style="color: white;">Suggest a Restaurant</a></dt>
+<dt><i class="fas fa-utensils fa-xs"></i><a href="https://www.youtube.com/watch?v=ql5vXHl6QOE" style="color: white;">Suggest a Restaurant</a>
 <dt><i class="fas fa-hands-helping fa-xs"></i><a href="https://www.youtube.com/watch?v=ew63r0QlfGA&t=1980s" style="color: white;">Become a Partner</a></dt>
 <dt><a href="https://www.youtube.com/watch?v=80RzZkMCLOY" style="color: white;">Legal</a></dt>
 <dt><a href="https://www.youtube.com/watch?v=3sL0omwElxw" style="color: white;">Contact</a></dt>
-</footer>
-
+</footer>-->
 </body>
 </html>
