--- a/menu1.html
+++ b/menu1.html
@@ -38,19 +38,22 @@
 
 <div class="nc">
 
-<div class="food">
+
 <div class="wrapper">
+<div class="food">	
 <a href="#"><span>
 	<p>Here is the dish name</p>
 <p>test 1<strong> Dish price $$$</strong></p></span>
   <i id="check" class="fa fa-check-circle"></i></a>
 </div>
+</div>
 
-
+<div class="food">
 <a href="#"><span>
 	<p>Here is the dish name</p>
 <p>test 2<strong> Dish price $$$</strong></p></span>
   <i id="check" class="fa fa-check-circle"></i></a>
+</div>
 </div>
 
 </div>
