saved combined experiment

--- a/old_mobile_css/menu1.html
+++ b/old_mobile_css/menu1.html
@@ -38,23 +38,12 @@
 
 <div class="nc">
 
-
-<div class="wrapper">
-<div class="food">	
-<a href="#"><span>
-	<p>Here is the dish name</p>
-<p>test 1<strong> Dish price $$$</strong></p></span>
-  <i id="check" class="fa fa-check-circle"></i></a>
-</div>
-</div>
-
-<div class="food">
-<a href="#"><span>
-	<p>Here is the dish name</p>
-<p>test 2<strong> Dish price $$$</strong></p></span>
-  <i id="check" class="fa fa-check-circle"></i></a>
-</div>
-</div>
+<div class="food"><p><strong>test</strong></p>
+<p>test 2</p></div>
+<div class="food"><p><strong>test</strong></p>
+<p>test 2</p></div>
+<div class="food"><p><strong>test</strong></p>
+<p>test 2</p></div>
 
 </div>
 
@@ -101,12 +90,18 @@
 </div>
 
 
-<!--<footer>
+
+<footer>
 <img class="bottom-image" src="images/ohmyfood.png">
-<dt><i class="fas fa-utensils fa-xs"></i><a href="https://www.youtube.com/watch?v=ql5vXHl6QOE" style="color: white;">Suggest a Restaurant</a>
+<dt><i class="fas fa-utensils fa-xs"></i><a href="https://www.youtube.com/watch?v=ql5vXHl6QOE" style="color: white;">Suggest a Restaurant</a></dt>
 <dt><i class="fas fa-hands-helping fa-xs"></i><a href="https://www.youtube.com/watch?v=ew63r0QlfGA&t=1980s" style="color: white;">Become a Partner</a></dt>
 <dt><a href="https://www.youtube.com/watch?v=80RzZkMCLOY" style="color: white;">Legal</a></dt>
 <dt><a href="https://www.youtube.com/watch?v=3sL0omwElxw" style="color: white;">Contact</a></dt>
-</footer>-->
+</footer>
+
+
 </body>
+<footer>
+	test text here
+</footer>
 </html>
