problem area troubleshoot of menu1 html file

--- a/menu1.html
+++ b/menu1.html
@@ -63,7 +63,7 @@
 	<hr class="underline"/>
 </div>
 
-<div class="nc">
+<!-- <div class="nc">
 
 <div class="food"><p><strong>test</strong></p>
 <p>test 2</p></div>
@@ -96,17 +96,17 @@
 
 </div>
 
-</div>
-
-</div>
+</div> -->
 
 
-<!--<footer>
+
+
+<footer>
 <img class="bottom-image" src="images/ohmyfood.png">
 <dt><i class="fas fa-utensils fa-xs"></i><a href="https://www.youtube.com/watch?v=ql5vXHl6QOE" style="color: white;">Suggest a Restaurant</a>
 <dt><i class="fas fa-hands-helping fa-xs"></i><a href="https://www.youtube.com/watch?v=ew63r0QlfGA&t=1980s" style="color: white;">Become a Partner</a></dt>
 <dt><a href="https://www.youtube.com/watch?v=80RzZkMCLOY" style="color: white;">Legal</a></dt>
 <dt><a href="https://www.youtube.com/watch?v=3sL0omwElxw" style="color: white;">Contact</a></dt>
-</footer>-->
+</footer>
 </body>
 </html>
