--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <dt><i class="fas fa-hands-helping fa-xs"></i><a href="https://www.youtube.com/watch?v=ew63r0QlfGA&t=1980s" style="color: white;">Become a Partner</a></dt>
 <dt><a href="https://www.youtube.com/watch?v=80RzZkMCLOY" style="color: white;">Legal</a></dt>
 <dt><a href="https://www.youtube.com/watch?v=3sL0omwElxw" style="color: white;">Contact</a></dt>
-</footer>
+TEST TEXT HERE</footer>
 
 </div>
 
