--- a/menu1.html
+++ b/menu1.html
@@ -22,11 +22,21 @@
         <img class="menu-page-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
         <div id="background">
             <div class="menu-container">
+             <!--    <div class="heart-menu"><i id="heart-id" class="far fa-heart fa-2x"></i></div> -->
                 <div class="restaurant-name">
-                    <div class="heart-menu"><i id="heart-id" class="far fa-heart fa-2x"></i></div>
+
+                    
                     <h1>restaurant name here</h1>
                 </div>
                 <div class="part">
+
+                    <div id="heart-box">
+                         <a href="#" class="heart-home">
+                     <i class="far fa-heart fa-lg"></i>
+                    <i class="fa fa-heart fa-lg"></i>
+                    </div>
+
+
                     <p>ENTREES</p>
                     <hr class="underline" />
                 </div>
