--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
 
 </div>
 
-<footer>
-<img class="bottom-image" src="images/ohmyfood.png">
-<dt><i class="fas fa-utensils fa-xs"></i><a href="https://www.youtube.com/watch?v=ql5vXHl6QOE" style="color: white;">Suggest a Restaurant</a></dt>
-<dt><i class="fas fa-hands-helping fa-xs"></i><a href="https://www.youtube.com/watch?v=ew63r0QlfGA&t=1980s" style="color: white;">Become a Partner</a></dt>
-<dt><a href="https://www.youtube.com/watch?v=80RzZkMCLOY" style="color: white;">Legal</a></dt>
-<dt><a href="https://www.youtube.com/watch?v=3sL0omwElxw" style="color: white;">Contact</a></dt>
-TEST TEXT HERE</footer>
+ <footer>
+        <img class="bottom-image" src="images/ohmyfood.png">
+        <dt><i class="fas fa-utensils fa-xs"></i><a href="mailto: abc@example.com" style="color: white;">Suggest a Restaurant</a></dt>
+        <dt><i class="fas fa-hands-helping fa-xs"></i><a href="mailto: abc@example.com" style="color: white;">Become a Partner</a></dt>
+        <dt><a href="mailto: abc@example.com" style="color: white;">Legal</a></dt>
+        <dt><a href="mailto: abc@example.com" style="color: white;">Contact</a></dt>
+      </footer>
 
 </div>
 
