--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <div class="restaurants">
 <strong>Restaurants</strong>
 
+<a href="menu3.html">
 <div class="image-container"><img class="menu-image" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
       <b><p>The Full Palette</p></b>
       <p>New York</p> 
@@ -53,7 +54,9 @@
   <i class="fa fa-heart fa-lg"></i>
 </a>
 </div>
+</a>
 
+<a href="menu2.html">
 <div class="image-container"><img class="menu-image" src="images/stil-u2Lp8tXIcjw-unsplash.jpg">      
 	<b><p>The Enchanted Plate</p></b>
       <p>New York</p>
@@ -62,7 +65,9 @@
   <i class="fa fa-heart fa-lg"></i>
 </a>
 </div>
+</a>
 
+<a href="menu4.html">
 <div class="image-container"><img class="menu-image" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg">      
 	<b><p>Bastille</p></b>
       <p>New York</p>
@@ -71,7 +76,9 @@
   <i class="fa fa-heart fa-lg"></i>
 </a>
 </div>
+</a>
 
+<a href="menu1.html">
 <div class="image-container"><img class="menu-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">      
 	<b><p>Le Gourmand</p></b>
       <p>New York</p>
@@ -80,6 +87,7 @@
   <i class="fa fa-heart fa-lg"></i>
 </a>
 </div>
+</a>
 
 </div>
 
