tablet and desktop changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 900px)" href="css/tablet.css">
 <link rel="stylesheet" media="screen and (min-width: 901px)" href="css/desktop.css">
 </head>
+
+
 <body>
 
 
@@ -26,7 +28,7 @@
 
 <strong>Book the Menu You Like</strong>
 
-<p>Discover top-of-the-art restaurants we picked for you</p>
+<div id="container-text">Discover top-of-the-art restaurants we picked for you</div>
 
 <button id="order">Explore our restaurants</button>
 
@@ -43,7 +45,7 @@
 </div>
 
 <div class="restaurants">
-<strong>Restaurants</strong>
+<div id="restaurant-text"><strong>Restaurants</strong></div>
 
 <a href="menu3.html">
 <div class="image-container"><img class="menu-image" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
