--- a/menu3.html
+++ b/menu3.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+<center>
+
 <head>
     <title>menu 3</title>
     <script src="https://kit.fontawesome.com/b86a0ac9d2.js" crossorigin="anonymous"></script>
@@ -133,5 +135,7 @@
     </div>
 
 </body>
+
+</center>
 
 </html>
