--- a/menu1.html
+++ b/menu1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+<center>
+
 <head>
     <title>menu 1</title>
     <script src="https://kit.fontawesome.com/b86a0ac9d2.js" crossorigin="anonymous"></script>
@@ -12,6 +14,8 @@
 </head>
 
 <body>
+
+
     <div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt="" /></div>
     <div class="loading-container">
         <header>
