more format changes

--- a/menu3.html
+++ b/menu3.html
@@ -4,7 +4,7 @@
 <title>menu 3</title>
 
     <script src="https://kit.fontawesome.com/b86a0ac9d2.js" crossorigin="anonymous"></script>
-    <meta content="width=device-width, initial-scale=1, minimum-scale=1" property="og"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" media="screen and (max-width: 700px)" href="css/mobile.css">
     <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 900px)" href="css/tablet.css">
