--- a/menu4.html
+++ b/menu4.html
@@ -4,7 +4,7 @@
 <title>menu 4</title>
 
     <script src="https://kit.fontawesome.com/b86a0ac9d2.js" crossorigin="anonymous"></script>
-    <meta content="width=device-width, initial-scale=1, minimum-scale=1" property="og"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" media="screen and (max-width: 700px)" href="css/mobile.css">
     <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 900px)" href="css/tablet.css">
@@ -49,10 +49,12 @@
                     <div class="food">
 
                         <div class="anime">
+                            <span>
                                     <p><strong>Grandmother's Vegetable Soup</strong></p>
                                     <p>Carrots, parsnips, and</p>
                                      <p>Jerusalem artichoke</p><div class="ds-price"><strong>$23</strong></div>
                                 <div class="check"> <i class="fa fa-check-circle"></i></div>
+                            </span>
                     </div>
                        
                     </div>
