--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
 
 
-<div id='hideMe'><img id="spinner"src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt=""/></div>
+<div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt="loader"/></div>
 
 	<div class="loading-container">
 
 	
 	<div class="loader">
-	<header><img class="heading-image" src="images/ohmyfood.png">
+	<header><img class="heading-image" src="images/ohmyfood.png" alt="OMF">
 </header>
 
 <div class="location"><i class="fas fa-map-marker-alt"></i><b>Jacksonville, Florida</b></div>
@@ -48,7 +48,7 @@
 <div id="restaurant-text"><strong>Restaurants</strong></div>
 
 <a href="menu3.html">
-<div class="image-container"><img class="menu-image" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+<div class="image-container"><img class="menu-image" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menu">
       <b><p>The Full Palette</p></b>
       <p>New York</p> 
   <a href="#" class="heart-home">
@@ -59,7 +59,7 @@
 </a>
 
 <a href="menu2.html">
-<div class="image-container"><img class="menu-image" src="images/stil-u2Lp8tXIcjw-unsplash.jpg">      
+<div class="image-container"><img class="menu-image" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menu">      
 	<b><p>The Enchanted Plate</p></b>
       <p>New York</p>
     <a href="#" class="heart-home">
@@ -70,7 +70,7 @@
 </a>
 
 <a href="menu4.html">
-<div class="image-container"><img class="menu-image" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg">      
+<div class="image-container"><img class="menu-image" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu">      
 	<b><p>Bastille</p></b>
       <p>New York</p>
     <a href="#" class="heart-home">
@@ -81,7 +81,7 @@
 </a>
 
 <a href="menu1.html">
-<div class="image-container"><img class="menu-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">      
+<div class="image-container"><img class="menu-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="menu">      
 	<b><p>Le Gourmand</p></b>
       <p>New York</p>
    <a href="#" class="heart-home">
@@ -102,6 +102,7 @@
       </footer>
 
 </div>
+
 
 </body>
 </html>
