--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>home</title>
 <script src="https://kit.fontawesome.com/b86a0ac9d2.js" crossorigin="anonymous"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="css/index.css">
 <link rel="stylesheet" media="screen and (max-width: 700px)" href="css/mobile.css">
 <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 900px)" href="css/tablet.css">
