--- a/menu1.html
+++ b/menu1.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>menu 1</title>
+<title>Le Gourmand</title>
 
     <script src="https://kit.fontawesome.com/b86a0ac9d2.js" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" media="screen and (max-width: 700px)" href="css/mobile.css">
     <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 900px)" href="css/tablet.css">
     <link rel="stylesheet" media="screen and (min-width: 901px)" href="css/desktop.css">
 
 <body>
-
 
     <div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt="loading" /></div>
     <div class="loading-container">
