--- a/index.html
+++ b/index.html
@@ -1,99 +1,102 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>home</title>
-<script src="https://kit.fontawesome.com/b86a0ac9d2.js" crossorigin="anonymous"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="css/index.css">
-<link rel="stylesheet" media="screen and (max-width: 700px)" href="css/mobile.css">
-<link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 900px)" href="css/tablet.css">
-<link rel="stylesheet" media="screen and (min-width: 901px)" href="css/desktop.css">
-</head>
+<html lang="en">
 
+<title>home</title>
+
+    <script src="https://kit.fontawesome.com/b86a0ac9d2.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" media="screen and (max-width: 700px)" href="css/mobile.css">
+    <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 900px)" href="css/tablet.css">
+    <link rel="stylesheet" media="screen and (min-width: 901px)" href="css/desktop.css">
 
 <body>
 
 
 <div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt="loader"/></div>
 
-	<div class="loading-container">
-
 	
 	<div class="loader">
-	<header><img class="heading-image" src="images/ohmyfood.png" alt="OMF">
-</header>
 
-<div class="location"><i class="fas fa-map-marker-alt"></i><b>Jacksonville, Florida</b></div>
-<div class="container"> 
+    <div class="loading-container">
+      
+	     <header><img class="heading-image" src="images/ohmyfood.png" alt="OMF"></header>
 
-<strong>Book the Menu You Like</strong>
+          <div class="location"><i class="fas fa-map-marker-alt"></i><b>Jacksonville, Florida</b>
+          </div>
 
-<div id="container-text">Discover top-of-the-art restaurants we picked for you</div>
+              <div class="container"> 
 
-<button id="order">Explore our restaurants</button>
+                <strong>Book the Menu You Like</strong>
 
-</div>
-<div id ="btn-group">
-	<div class="btn-center">
-	<strong>How it works</strong>
-	<button type="button" class="btn-primary"><small>1</small><i class="fas fa-mobile-alt"></i><b>Choose a restaurant</b></button>
-	<button type="button" class="btn-primary"><small>2</small><i class="fas fa-list"></i><b>Create your menu</b></button>
-	<button type="button" class="btn-primary"><small>3</small><i class="fas fa-store"></i><b>Go enjoy it at the restaurant</b></button>
+                <div id="container-text">Discover top-of-the-art restaurants we picked for you</div>
 
-</div>
+                  <button id="order">Explore our restaurants</button>
 
-</div>
+              </div>
 
-<div class="restaurants">
-<div id="restaurant-text"><strong>Restaurants</strong></div>
+                    <div id ="btn-group">
 
-<a href="menu3.html">
-<div class="image-container"><img class="menu-image" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menu">
-      <b><p>The Full Palette</p></b>
-      <p>New York</p> 
-  <a href="#" class="heart-home">
-  	<i class="far fa-heart fa-lg"></i>
-  <i class="fa fa-heart fa-lg"></i>
-</a>
-</div>
-</a>
+	                   <div class="btn-center">
+	                   <strong>How it works</strong>
+	                   <button type="button" class="btn-primary"><small>1</small><i class="fas fa-mobile-alt"></i><b>Choose a restaurant</b></button>
+	                   <button type="button" class="btn-primary"><small>2</small><i class="fas fa-list"></i><b>Create your menu</b></button>
+	                   <button type="button" class="btn-primary"><small>3</small><i class="fas fa-store"></i><b>Go enjoy it at the restaurant</b></button>
+                    </div>
 
-<a href="menu2.html">
-<div class="image-container"><img class="menu-image" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menu">      
-	<b><p>The Enchanted Plate</p></b>
-      <p>New York</p>
-    <a href="#" class="heart-home">
-  	<i class="far fa-heart fa-lg"></i>
-  <i class="fa fa-heart fa-lg"></i>
-</a>
-</div>
-</a>
+                    </div>
 
-<a href="menu4.html">
-<div class="image-container"><img class="menu-image" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu">      
-	<b><p>Bastille</p></b>
-      <p>New York</p>
-    <a href="#" class="heart-home">
-  	<i class="far fa-heart fa-lg"></i>
-  <i class="fa fa-heart fa-lg"></i>
-</a>
-</div>
-</a>
+                    <div class="restaurants">
 
-<a href="menu1.html">
-<div class="image-container"><img class="menu-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="menu">      
-	<b><p>Le Gourmand</p></b>
-      <p>New York</p>
-   <a href="#" class="heart-home">
-  	<i class="far fa-heart fa-lg"></i>
-  <i class="fa fa-heart fa-lg"></i>
-</a>
-</div>
-</a>
+                        <div id="restaurant-text"><strong>Restaurants</strong></div>
 
-</div>
+                  <a href="menu3.html">
+                    <div class="image-container"><img class="menu-image" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menu">
+                      <b><p>The Full Palette</p></b>
+                        <p>New York</p> 
+                          <a href="#" class="heart-home">
+  	                       <i class="far fa-heart fa-lg"></i>
+                          <i class="fa fa-heart fa-lg"></i>
+                        </a>
+                    </div>
+                  </a>
 
- <footer>
+                  <a href="menu2.html">
+                    <div class="image-container"><img class="menu-image" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menu">      
+	                     <b><p>The Enchanted Plate</p></b>
+                        <p>New York</p>
+                          <a href="#" class="heart-home">
+  	                       <i class="far fa-heart fa-lg"></i>
+                          <i class="fa fa-heart fa-lg"></i>
+                        </a>
+                    </div>
+                  </a>
+
+                  <a href="menu4.html">
+                    <div class="image-container"><img class="menu-image" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu"> 
+                      <b><p>Bastille</p></b>
+                        <p>New York</p>
+                          <a href="#" class="heart-home">
+  	                       <i class="far fa-heart fa-lg"></i>
+                          <i class="fa fa-heart fa-lg"></i>
+                        </a>
+                    </div>
+                  </a>
+
+                  <a href="menu1.html">
+                    <div class="image-container"><img class="menu-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="menu">      
+	                     <b><p>Le Gourmand</p></b>
+                        <p>New York</p>
+                          <a href="#" class="heart-home">
+  	                       <i class="far fa-heart fa-lg"></i>
+                          <i class="fa fa-heart fa-lg"></i>
+                        </a>
+                    </div>
+                  </a>
+
+                  </div>
+
+      <footer>
         <img class="bottom-image" src="images/ohmyfood.png">
         <dt><i class="fas fa-utensils fa-xs"></i><a href="mailto: abc@example.com" style="color: white;">Suggest a Restaurant</a></dt>
         <dt><i class="fas fa-hands-helping fa-xs"></i><a href="mailto: abc@example.com" style="color: white;">Become a Partner</a></dt>
@@ -101,8 +104,12 @@
         <dt><a href="mailto: abc@example.com" style="color: white;">Contact</a></dt>
       </footer>
 
-</div>
+    </div>
+
+  </div>
 
 
 </body>
+
+
 </html>
