html-css cleanup

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
               <div class="container"> 
 
-                <strong>Book the Menu You Like</strong>
+                <h1>Book the Menu You Like</h1>
 
                 <div id="container-text">Discover top-of-the-art restaurants we picked for you</div>
 
@@ -38,7 +38,8 @@
                     <div id ="btn-group">
 
 	                   <div class="btn-center">
-	                   <strong>How it works</strong>
+	                   <!-- <strong>How it works</strong> -->
+                     <h2>How it works</h2>
 	                   <button type="button" class="btn-primary"><small>1</small><i class="fas fa-mobile-alt"></i><b>Choose a restaurant</b></button>
 	                   <button type="button" class="btn-primary"><small>2</small><i class="fas fa-list"></i><b>Create your menu</b></button>
 	                   <button type="button" class="btn-primary"><small>3</small><i class="fas fa-store"></i><b>Go enjoy it at the restaurant</b></button>
@@ -51,58 +52,72 @@
                         <div id="restaurant-text"><strong>Restaurants</strong></div>
 
                   <a href="menu3.html">
-                    <div class="image-container"><img class="menu-image" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menu">
-                      <b><p>The Full Palette</p></b>
-                        <p>New York</p> 
-                          <a href="#" class="heart-home">
-  	                       <i class="far fa-heart fa-lg"></i>
+                    <div class="image-container">
+                      <img class="menu-image" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menu">
+                      <h3><p>The Full Palette</p></h3>
+                      <p>New York</p>
+
+                      <a href="#" class="heart-home">
+  	                      <i class="far fa-heart fa-lg"></i>
                           <i class="fa fa-heart fa-lg"></i>
                         </a>
                     </div>
                   </a>
 
                   <a href="menu2.html">
-                    <div class="image-container"><img class="menu-image" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menu">      
-	                     <b><p>The Enchanted Plate</p></b>
-                        <p>New York</p>
-                          <a href="#" class="heart-home">
-  	                       <i class="far fa-heart fa-lg"></i>
-                          <i class="fa fa-heart fa-lg"></i>
+                    <div class="image-container">
+                      <img class="menu-image" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menu">      
+	                     <h3><p>The Enchanted Plate</p></h3>
+                       <p>New York</p>
+
+                       <a href="#" class="heart-home">
+  	                     <i class="far fa-heart fa-lg"></i>
+                         <i class="fa fa-heart fa-lg"></i>
                         </a>
                     </div>
                   </a>
 
                   <a href="menu4.html">
-                    <div class="image-container"><img class="menu-image" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu"> 
-                      <b><p>Bastille</p></b>
-                        <p>New York</p>
-                          <a href="#" class="heart-home">
-  	                       <i class="far fa-heart fa-lg"></i>
-                          <i class="fa fa-heart fa-lg"></i>
+                    <div class="image-container">
+                      <img class="menu-image" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu"> 
+                      <h3><p>Bastille</p></h3>
+                      <p>New York</p>
+
+                        <a href="#" class="heart-home">
+  	                     <i class="far fa-heart fa-lg"></i>
+                         <i class="fa fa-heart fa-lg"></i>
                         </a>
                     </div>
                   </a>
 
                   <a href="menu1.html">
-                    <div class="image-container"><img class="menu-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="menu">      
-	                     <b><p>Le Gourmand</p></b>
-                        <p>New York</p>
-                          <a href="#" class="heart-home">
-  	                       <i class="far fa-heart fa-lg"></i>
-                          <i class="fa fa-heart fa-lg"></i>
-                        </a>
-                    </div>
-                  </a>
+                    <div class="image-container">
+                      <img class="menu-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="menu">      
+	                    <h3><p>Le Gourmand</p></h3>
+                      <p>New York</p>
 
-                  </div>
+                      <a href="#" class="heart-home">
+  	                   <i class="far fa-heart fa-lg"></i>
+                       <i class="fa fa-heart fa-lg"></i>
+                      </a>
+                   </div>
+                 </a>
 
-      <footer>
-        <img class="bottom-image" src="images/ohmyfood.png">
-        <dt><i class="fas fa-utensils fa-xs"></i><a href="mailto: abc@example.com" style="color: white;">Suggest a Restaurant</a></dt>
-        <dt><i class="fas fa-hands-helping fa-xs"></i><a href="mailto: abc@example.com" style="color: white;">Become a Partner</a></dt>
-        <dt><a href="mailto: abc@example.com" style="color: white;">Legal</a></dt>
-        <dt><a href="mailto: abc@example.com" style="color: white;">Contact</a></dt>
-      </footer>
+              </div>
+
+<footer>
+  <img class="bottom-image" src="images/ohmyfood.png" alt="ohmyfood logo">
+  <a href="mailto: abc@example.com">
+    <i class="fas fa-utensils fa-xs footer-icon"></i>
+    <span>Suggest a Restaurant</span>
+  </a>
+  <a href="mailto: abc@example.com">
+    <i class="fas fa-hands-helping fa-xs footer-icon"></i>
+    <span>Become a Partner</span>
+  </a>
+  <a href="mailto: abc@example.com">Legal</a>
+  <a href="mailto: abc@example.com">Contact</a>
+</footer>
 
     </div>
 
