--- a/menu1.html
+++ b/menu1.html
@@ -132,13 +132,19 @@
         </div>
 
         </div>
-       <footer>
-        <img class="bottom-image" src="images/ohmyfood.png" alt="OMF">
-        <dt><i class="fas fa-utensils fa-xs"></i><a href="mailto: abc@example.com" style="color: white;">Suggest a Restaurant</a></dt>
-        <dt><i class="fas fa-hands-helping fa-xs"></i><a href="mailto: abc@example.com" style="color: white;">Become a Partner</a></dt>
-        <dt><a href="mailto: abc@example.com" style="color: white;">Legal</a></dt>
-        <dt><a href="mailto: abc@example.com" style="color: white;">Contact</a></dt>
-      </footer>
+<footer>
+  <img class="bottom-image" src="images/ohmyfood.png" alt="ohmyfood logo">
+  <a href="mailto: abc@example.com">
+    <i class="fas fa-utensils fa-xs footer-icon"></i>
+    <span>Suggest a Restaurant</span>
+  </a>
+  <a href="mailto: abc@example.com">
+    <i class="fas fa-hands-helping fa-xs footer-icon"></i>
+    <span>Become a Partner</span>
+  </a>
+  <a href="mailto: abc@example.com">Legal</a>
+  <a href="mailto: abc@example.com">Contact</a>
+</footer>
     
 
 </div>
