--- a/menu2.html
+++ b/menu2.html
@@ -56,7 +56,7 @@
                     <div class="food">
 
                         <div class="anime">
-                                    <p><strong>Lobster and Leek Foam</strong></p>
+                                    <p><strong>Lobster & Leek Foam</strong></p>
                                     <p>Marinated with orange zest</p><div class="price"><strong>$23</strong></div>
                                 <div class="check"> <i class="fa fa-check-circle"></i></div>
                     </div>
@@ -66,7 +66,7 @@
 
                                 <div class="anime">
                                     <p><strong>Duck Foie Gras</strong></p>
-                                    <p>With fig jam and grilled baguette</p><div class="price"><strong>$23</strong></div>
+                                    <p>With fig jam & grilled baguette</p><div class="price"><strong>$23</strong></div>
                                 <div class="check"> <i class="fa fa-check-circle"></i></div>
                     </div>
 
@@ -100,7 +100,7 @@
 
                                 <div class="anime">
                                     <p><strong>Braised Ox Tail</strong></p>
-                                    <p>With wild rice and lemon zest</p><div class="price"><strong>$23</strong></div>
+                                    <p>With wild rice & lemon zest</p><div class="price"><strong>$23</strong></div>
                                 <div class="check"> <i class="fa fa-check-circle"></i></div>
                     </div>
 
@@ -116,7 +116,7 @@
 
 
                             <div class="anime">
-                                    <p><strong>Chocolate and Hazelnut Macaroons</strong></p>
+                                    <p><strong>Chocolate & Hazelnut Macaroons</strong></p>
                                     <p>With caramel butter ice cream</p><div class="price"><strong>$23</strong></div>
                                 <div class="check"> <i class="fa fa-check-circle"></i></div>
                     </div>
@@ -147,13 +147,19 @@
                 <button type="button" id="order-btn">Order</button>
             </div>
         </div>
-       <footer>
-        <img class="bottom-image" src="images/ohmyfood.png" alt="OMF">
-        <dt><i class="fas fa-utensils fa-xs"></i><a href="mailto: abc@example.com" style="color: white;">Suggest a Restaurant</a></dt>
-        <dt><i class="fas fa-hands-helping fa-xs"></i><a href="mailto: abc@example.com" style="color: white;">Become a Partner</a></dt>
-        <dt><a href="mailto: abc@example.com" style="color: white;">Legal</a></dt>
-        <dt><a href="mailto: abc@example.com" style="color: white;">Contact</a></dt>
-      </footer>
+<footer>
+  <img class="bottom-image" src="images/ohmyfood.png" alt="ohmyfood logo">
+  <a href="mailto: abc@example.com">
+    <i class="fas fa-utensils fa-xs footer-icon"></i>
+    <span>Suggest a Restaurant</span>
+  </a>
+  <a href="mailto: abc@example.com">
+    <i class="fas fa-hands-helping fa-xs footer-icon"></i>
+    <span>Become a Partner</span>
+  </a>
+  <a href="mailto: abc@example.com">Legal</a>
+  <a href="mailto: abc@example.com">Contact</a>
+</footer>
     </div>
 
 </div>
