--- a/menu4.html
+++ b/menu4.html
@@ -46,12 +46,11 @@
                     <div class="food">
 
                         <div class="anime">
-                            <span>
                                     <p><strong>Grandmother's Vegetable Soup</strong></p>
-                                    <p>Carrots, parsnips, and</p>
-                                     <p>Jerusalem artichoke</p><div class="ds-price"><strong>$23</strong></div>
+                                    <p>Carrots, parsnips & Jerusalem Artichoke</p>
+                                    <div class="price"><strong>$23</strong></div>
                                 <div class="check"> <i class="fa fa-check-circle"></i></div>
-                            </span>
+                            
                     </div>
                        
                     </div>
@@ -141,13 +140,19 @@
                 <button type="button" id="order-btn">Order</button>
             </div>
         </div>
-       <footer>
-        <img class="bottom-image" src="images/ohmyfood.png" alt="OMF">
-        <dt><i class="fas fa-utensils fa-xs"></i><a href="mailto: abc@example.com" style="color: white;">Suggest a Restaurant</a></dt>
-        <dt><i class="fas fa-hands-helping fa-xs"></i><a href="mailto: abc@example.com" style="color: white;">Become a Partner</a></dt>
-        <dt><a href="mailto: abc@example.com" style="color: white;">Legal</a></dt>
-        <dt><a href="mailto: abc@example.com" style="color: white;">Contact</a></dt>
-      </footer>
+<footer>
+  <img class="bottom-image" src="images/ohmyfood.png" alt="ohmyfood logo">
+  <a href="mailto: abc@example.com">
+    <i class="fas fa-utensils fa-xs footer-icon"></i>
+    <span>Suggest a Restaurant</span>
+  </a>
+  <a href="mailto: abc@example.com">
+    <i class="fas fa-hands-helping fa-xs footer-icon"></i>
+    <span>Become a Partner</span>
+  </a>
+  <a href="mailto: abc@example.com">Legal</a>
+  <a href="mailto: abc@example.com">Contact</a>
+</footer>
     </div>
 
 </div>
