--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
     <script src="https://kit.fontawesome.com/b86a0ac9d2.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" media="screen and (max-width: 700px)" href="css/mobile.css">
     <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 900px)" href="css/tablet.css">
@@ -38,7 +40,7 @@
                     <div id ="btn-group">
 
 	                   <div class="btn-center">
-	                   <!-- <strong>How it works</strong> -->
+	                   
                      <h2>How it works</h2>
 	                   <button type="button" class="btn-primary"><small>1</small><i class="fas fa-mobile-alt"></i><b>Choose a restaurant</b></button>
 	                   <button type="button" class="btn-primary"><small>2</small><i class="fas fa-list"></i><b>Create your menu</b></button>
@@ -51,10 +53,12 @@
 
                         <div id="restaurant-text"><strong>Restaurants</strong></div>
 
+                      <div class="restaurant-wrapper">
+
                   <a href="menu3.html">
                     <div class="image-container">
                       <img class="menu-image" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menu">
-                      <h3><p>The Full Palette</p></h3>
+                      <h3>The Full Palette</h3>
                       <p>New York</p>
 
                       <a href="#" class="heart-home">
@@ -67,7 +71,7 @@
                   <a href="menu2.html">
                     <div class="image-container">
                       <img class="menu-image" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menu">      
-	                     <h3><p>The Enchanted Plate</p></h3>
+	                     <h3>The Enchanted Plate</h3>
                        <p>New York</p>
 
                        <a href="#" class="heart-home">
@@ -80,7 +84,7 @@
                   <a href="menu4.html">
                     <div class="image-container">
                       <img class="menu-image" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu"> 
-                      <h3><p>Bastille</p></h3>
+                      <h3>Bastille</h3>
                       <p>New York</p>
 
                         <a href="#" class="heart-home">
@@ -92,8 +96,7 @@
 
                   <a href="menu1.html">
                     <div class="image-container">
-                      <img class="menu-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="menu">      
-	                    <h3><p>Le Gourmand</p></h3>
+                      <img class="menu-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="menu"> <h3>Le Gourmand</h3>
                       <p>New York</p>
 
                       <a href="#" class="heart-home">
@@ -102,6 +105,8 @@
                       </a>
                    </div>
                  </a>
+
+                 </div>
 
               </div>
 
