hopefully final changes

--- a/menu1.html
+++ b/menu1.html
@@ -22,12 +22,16 @@
         <img class="menu-page-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
         <div id="background">
             <div class="menu-container">
+
                <div class="restaurant-name">
-                    <h1>Le Gourmand</h1></div>  <div id="heart-box">
-                         <a href="#" class="heart-home">
-                     <i class="far fa-heart fa-2x"></i>
-                    <i class="fa fa-heart fa-2x"></i></a>
-                    </div>
+                    <h1>Le Gourmand</h1>  
+                     <span class="heart-home fa-stack fa-lg menu-heart">
+                        <i class="far fa-heart fa-lg outline fa-stack-1x"></i>
+                        <i class="fa fa-heart fa-lg solid fa-stack-1x"></i>
+                     </span>
+                     </div>
+
+
 
                 <div class="part">
                     <p>ENTREES</p>
@@ -134,16 +138,16 @@
         </div>
 <footer>
   <img class="bottom-image" src="images/ohmyfood.png" alt="ohmyfood logo">
-  <a href="mailto: abc@example.com">
+  <a href="mailto:abc@example.com">
     <i class="fas fa-utensils fa-xs footer-icon"></i>
     <span>Suggest a Restaurant</span>
   </a>
-  <a href="mailto: abc@example.com">
+  <a href="mailto:abc@example.com">
     <i class="fas fa-hands-helping fa-xs footer-icon"></i>
     <span>Become a Partner</span>
   </a>
-  <a href="mailto: abc@example.com">Legal</a>
-  <a href="mailto: abc@example.com">Contact</a>
+  <a href="mailto:abc@example.com">Legal</a>
+  <a href="mailto:abc@example.com">Contact</a>
 </footer>
     
 
