--- a/menu2.html
+++ b/menu2.html
@@ -22,12 +22,14 @@
         <img class="menu-page-image" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
         <div id="background">
             <div class="menu-container">
-                <div class="restaurant-name">
-                    <h1>The Enchanted Plate</h1></div>  <div id="heart-box">
-                         <a href="#" class="heart-home">
-                     <i class="far fa-heart fa-2x"></i>
-                    <i class="fa fa-heart fa-2x"></i></a>
-                    </div>
+
+                <div id="restaurant-name">
+                    <h1>The Enchanted Plate</h1>  
+                     <span class="heart-home fa-stack fa-lg menu-heart">
+                        <i class="far fa-heart fa-lg outline fa-stack-1x"></i>
+                        <i class="fa fa-heart fa-lg solid fa-stack-1x"></i>
+                     </span>
+                     </div>
 
                 <div class="part">
                     <p>ENTREES</p>
