--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>home</title>
+<title>Oh My Food</title>
 
     <script src="https://kit.fontawesome.com/b86a0ac9d2.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -51,64 +51,64 @@
 
                     <div class="restaurants">
 
-                        <div id="restaurant-text"><strong>Restaurants</strong></div>
+                      <div id="restaurant-text"><strong>Restaurants</strong></div>
 
                       <div class="restaurant-wrapper">
 
-                  <a href="menu3.html">
-                    <div class="image-container">
-                      <img class="menu-image" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menu">
-                      <h3>The Full Palette</h3>
-                      <p>New York</p>
+                        <a href="menu3.html" class="restaurant-card">
+                          <div class="image-container">
+                            <img class="menu-image" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="menu">
 
-                      <a href="#" class="heart-home">
-  	                      <i class="far fa-heart fa-lg"></i>
-                          <i class="fa fa-heart fa-lg"></i>
+                            <h3>The Full Palette</h3>
+                            <p>New York</p>
+
+                            <span class="heart-home fa-stack fa-1x">
+        	                      <i class="far fa-heart fa-lg outline fa-stack-1x"></i>
+                                <i class="fa fa-heart fa-lg solid fa-stack-1x"></i>
+                              </span>
+                            </div>
                         </a>
-                    </div>
-                  </a>
 
-                  <a href="menu2.html">
-                    <div class="image-container">
-                      <img class="menu-image" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menu">      
-	                     <h3>The Enchanted Plate</h3>
-                       <p>New York</p>
+                        <a href="menu2.html" class="restaurant-card">
+                          <div class="image-container">
+                            <img class="menu-image" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="menu">      
+      	                     <h3>The Enchanted Plate</h3>
+                             <p>New York</p>
 
-                       <a href="#" class="heart-home">
-  	                     <i class="far fa-heart fa-lg"></i>
-                         <i class="fa fa-heart fa-lg"></i>
+                             <span class="heart-home fa-stack fa-1x">
+                                <i class="far fa-heart fa-lg outline fa-stack-1x"></i>
+                                <i class="fa fa-heart fa-lg solid fa-stack-1x"></i>
+                              </span>
+                          </div>
                         </a>
-                    </div>
-                  </a>
 
-                  <a href="menu4.html">
-                    <div class="image-container">
-                      <img class="menu-image" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu"> 
-                      <h3>Bastille</h3>
-                      <p>New York</p>
+                        <a href="menu4.html" class="restaurant-card">
+                          <div class="image-container">
+                            <img class="menu-image" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="menu"> 
+                            <h3>Bastille</h3>
+                            <p>New York</p>
 
-                        <a href="#" class="heart-home">
-  	                     <i class="far fa-heart fa-lg"></i>
-                         <i class="fa fa-heart fa-lg"></i>
+                              <span class="heart-home fa-stack fa-1x">
+                                <i class="far fa-heart fa-lg outline fa-stack-1x"></i>
+                                <i class="fa fa-heart fa-lg solid fa-stack-1x"></i>
+                              </span>
+                          </div>
                         </a>
+
+                        <a href="menu1.html" class="restaurant-card">
+                          <div class="image-container">
+                            <img class="menu-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="menu"> <h3>Le Gourmand</h3>
+                            <p>New York</p>
+
+                            <span class="heart-home fa-stack fa-1x">
+                                <i class="far fa-heart fa-lg outline fa-stack-1x"></i>
+                                <i class="fa fa-heart fa-lg solid fa-stack-1x"></i>
+                              </span>
+                      </div>
+                    </a>
                     </div>
-                  </a>
+    </div>
 
-                  <a href="menu1.html">
-                    <div class="image-container">
-                      <img class="menu-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="menu"> <h3>Le Gourmand</h3>
-                      <p>New York</p>
-
-                      <a href="#" class="heart-home">
-  	                   <i class="far fa-heart fa-lg"></i>
-                       <i class="fa fa-heart fa-lg"></i>
-                      </a>
-                   </div>
-                 </a>
-
-                 </div>
-
-              </div>
 
 <footer>
   <img class="bottom-image" src="images/ohmyfood.png" alt="ohmyfood logo">
