clean up and body/html fix

--- a/index.html
+++ b/index.html
@@ -18,36 +18,38 @@
 <div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt="loader"/></div>
 
 	
-	<div class="loader">
+<div class="loader">
 
-    <div class="loading-container">
+  <div class="loading-container">
       
-	     <header><img class="heading-image" src="images/ohmyfood.png" alt="OMF"></header>
+	<header><img class="heading-image" src="images/ohmyfood.png" alt="OMF"></header>
 
-          <div class="location"><i class="fas fa-map-marker-alt"></i><b>Jacksonville, Florida</b>
-          </div>
+    <div class="location"><i class="fas fa-map-marker-alt"></i><b>Jacksonville, Florida</b>
+    </div>
 
-              <div class="container"> 
+      <div class="container"> 
 
                 <h1>Book the Menu You Like</h1>
 
-                <div id="container-text">Discover top-of-the-art restaurants we picked for you</div>
+        <div id="container-text">Discover top-of-the-art restaurants we picked for you
+
+        </div>
 
                   <button id="order">Explore our restaurants</button>
 
-              </div>
+      </div>
 
-                    <div id ="btn-group">
+          <div id ="btn-group">
 
-	                   <div class="btn-center">
+	          <div class="btn-center">
 	                   
                      <h2>How it works</h2>
 	                   <button type="button" class="btn-primary"><small>1</small><i class="fas fa-mobile-alt"></i><b>Choose a restaurant</b></button>
 	                   <button type="button" class="btn-primary"><small>2</small><i class="fas fa-list"></i><b>Create your menu</b></button>
 	                   <button type="button" class="btn-primary"><small>3</small><i class="fas fa-store"></i><b>Go enjoy it at the restaurant</b></button>
-                    </div>
+            </div>
 
-                    </div>
+          </div>
 
                     <div class="restaurants">
 
@@ -124,9 +126,9 @@
   <a href="mailto:abc@example.com">Contact</a>
 </footer>
 
-    </div>
-
   </div>
+
+</div>
 
 
 </body>
