btn center work

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 	          <div class="btn-center">
 	                   
                      <h2>How it works</h2>
-	                   <button type="button" class="btn-primary"><small>1</small><i class="fas fa-mobile-alt"></i><b>Choose a restaurant</b></button>
-	                   <button type="button" class="btn-primary"><small>2</small><i class="fas fa-list"></i><b>Create your menu</b></button>
-	                   <button type="button" class="btn-primary"><small>3</small><i class="fas fa-store"></i><b>Go enjoy it at the restaurant</b></button>
+	                   <button type="button" class="btn-primary"><small>1</small><i class="fas fa-mobile-alt"></i>Choose a restaurant</button>
+	                   <button type="button" class="btn-primary"><small>2</small><i class="fas fa-list"></i>Create your menu</button>
+	                   <button type="button" class="btn-primary"><small>3</small><i class="fas fa-store"></i>Go enjoy it at the restaurant</button>
             </div>
 
           </div>
