--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" media="screen and (max-width: 700px)" href="css/mobile.css">
-    <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 900px)" href="css/tablet.css">
-    <link rel="stylesheet" media="screen and (min-width: 901px)" href="css/desktop.css">
+    <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 1029px)" href="css/tablet.css">
+    <link rel="stylesheet" media="screen and (min-width: 1030px)" href="css/desktop.css">
+
+<main>
 
 <body>
-
 
 <div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt="loader"/></div>
 
 	
-<div class="loader">
+
 
   <div class="loading-container">
       
@@ -38,17 +39,14 @@
                   <button id="order">Explore our restaurants</button>
 
       </div>
+        <div class="how">
+      <h2>How it works</h2>
+        </div>
+          <div class ="btn-group">
 
-          <div id ="btn-group">
-
-	          <div class="btn-center">
-	                   
-                     <h2>How it works</h2>
 	                   <button type="button" class="btn-primary"><small>1</small><i class="fas fa-mobile-alt"></i>Choose a restaurant</button>
 	                   <button type="button" class="btn-primary"><small>2</small><i class="fas fa-list"></i>Create your menu</button>
 	                   <button type="button" class="btn-primary"><small>3</small><i class="fas fa-store"></i>Go enjoy it at the restaurant</button>
-            </div>
-
           </div>
 
                     <div class="restaurants">
@@ -128,10 +126,11 @@
 
   </div>
 
-</div>
+
 
 
 </body>
 
+</main>
 
 </html>
