--- a/menu1.html
+++ b/menu1.html
@@ -5,17 +5,23 @@
 
     <script src="https://kit.fontawesome.com/b86a0ac9d2.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" media="screen and (max-width: 700px)" href="css/mobile.css">
-    <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 900px)" href="css/tablet.css">
-    <link rel="stylesheet" media="screen and (min-width: 901px)" href="css/desktop.css">
+    <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 1029px)" href="css/tablet.css">
+    <link rel="stylesheet" media="screen and (min-width: 1030px)" href="css/desktop.css">
 
-<body>
+<main>
+
+<body class="second">
 
 <div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt="loading" /></div>
 
 <div class="loading-container">
+
     <header>
+
         <div class="flex-container">
             <div><a href="index.html"><i class="fas fa-arrow-left"></i></a></div>
         </div><img class="heading-image" src="images/ohmyfood.png" alt="OMF">
@@ -163,5 +169,7 @@
 </div>
 
 </body>
+
+</main>
 
 </html>
