--- a/menu2.html
+++ b/menu2.html
@@ -5,6 +5,8 @@
 
     <script src="https://kit.fontawesome.com/b86a0ac9d2.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" media="screen and (max-width: 700px)" href="css/mobile.css">
     <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 900px)" href="css/tablet.css">
