--- a/menu1.html
+++ b/menu1.html
@@ -14,19 +14,22 @@
 
 <main>
 
-<body class="second">
+<body>
 
-<div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt="loading" /></div>
+<div id='hideMe'><img id="spinner" src="https://media3.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif?cid=ecf05e47eliw56p6zldylbfqwfj369kidz92vacxs7xh90w8&rid=giphy.gif" alt="loading" />
+</div>
 
 <div class="loading-container">
 
     <header>
 
         <div class="flex-container">
-            <div><a href="index.html"><i class="fas fa-arrow-left"></i></a></div>
+            <div><a href="index.html"><i class="fas fa-arrow-left"></i></a>
+            </div>
         </div><img class="heading-image" src="images/ohmyfood.png" alt="OMF">
     </header>
-        <img class="menu-page-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
+        <div class="rest-image"><img class="menu-page-image" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant">
+        </div>
         <div id="background">
             <div class="menu-container">
 
@@ -72,6 +75,7 @@
                             </div>
 
                         </div>
+
 
             <div class="part">
                 <p>MAIN DISH</p>
