--- a/menu3.html
+++ b/menu3.html
@@ -9,8 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" media="screen and (max-width: 700px)" href="css/mobile.css">
-    <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 1529px)" href="css/tablet.css">
-    <link rel="stylesheet" media="screen and (min-width: 1530px)" href="css/desktop.css">
+    <link rel="stylesheet" media="screen and (min-width: 701px) and (max-width: 1029px)" href="css/tablet.css">
+    <link rel="stylesheet" media="screen and (min-width: 1030px)" href="css/desktop.css">
+
+<main>
 
 <body>
 
@@ -22,7 +24,8 @@
                 <div><a href="index.html"><i class="fas fa-arrow-left"></i></a></div>
         </div><img class="heading-image" src="images/ohmyfood.png" alt="OMF">
     </header>
-        <img class="menu-page-image" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
+        <div class="rest-image"><img class="menu-page-image" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant">
+        </div>
         <div id="background">
             <div class="menu-container">
 
@@ -159,5 +162,7 @@
 </div>
 
 </body>
+
+</main>
 
 </html>
